# DerpiWallpaper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_binaries.yml  tag_version.yml
derpiwallpaper/: __main__.py  _version.py  autostart.py  config.py  ui.py  utils.py  wallpapermanager.py  widgetgallery.py  worker.py
derpiwallpaper/utils/: __init__.py  set_wallpaper.py
derpiwallpaper/workers/: __init__.py  cleanup.py  search.py  wallpaper_updater.py
icon/: derpiwallpaper.kra
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
vagrant/ubuntu/: Vagrantfile
vagrant/windows/: Vagrantfile
