[tool.poetry]
name = "derpiwallpaper"
version = "0.3.0"
description = "Small utility that sets the windows desktop wallpaper to a random derpibooru image matching a query string."
authors = ["tom300z"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.14"
requests = "^2.32.3"
pyside6 = "^6.8.0.2"
appdirs = "^1.4.4"
configobj = "^5.0.9"
winshell = { version = "^0.6", platform  = "win32" }
pywin32 = { version = "^308", platform  = "win32" }

[tool.poetry.group.dev.dependencies]
nuitka = {url = "https://github.com/Nuitka/Nuitka/archive/develop.zip"}
imageio = "^2.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
