[tool.poetry]
name = "derpiwallpaper"
version = "1.0.5"
description = "Small utility that sets the windows desktop wallpaper to a random derpibooru image matching a query string."
authors = ["tom300z"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13,<3.14"
requests = "^2.32.3"
pyside6 = "^6.8.0.2"
appdirs = "^1.4.4"
configobj = "^5.0.9"
winshell = { version = "^0.6", platform  = "win32" }
pywin32 = { version = "^308", platform  = "win32" }

[tool.poetry.group.dev.dependencies]
imageio = "^2.36.0"
nuitka = "^2.4.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
